# ChangeLog for net-misc/zaptel
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.3 2004/03/16 00:25:16 stkn Exp $

*zaptel-0.8.1 (16 Mar 2004)

  16 Mar 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.8.1.ebuild:
  version bump, this version still lacks linux-2.6 support
  (kbuild + sandbox is a problem atm...)

  19 Feb 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild:
  fixed SRC_URI

*zaptel-0.7.0 (04 Jan 2004)

  04 Jan 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild,
  files/zaptel-install_prefix-typo.patch,
  files/zaptel-mkdir-usrincludelinux.patch, files/zaptel-modulesd.patch:
  initial import. ebuild created by Ray Russell Reese III <anti@gentoo.org>
