@@ -1,6 +1,6 @@
-MD5 6df1c8a53c7d4b2442025a7b041f5078 ChangeLog 787
+MD5 483f3238a9127793d1738fa8a527cde8 ChangeLog 905
 MD5 498e50ddc421377ced27fab0d8a13fe8 zaptel-0.8.1.ebuild 1335
-MD5 49609b2c5a05064a7c76388e0c702018 zaptel-0.7.0.ebuild 1424
+MD5 4a6b4ebd316196c86f2df6aa067ed7c6 zaptel-0.7.0.ebuild 1392
 MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
 MD5 e6a38926132312059bd3a8a712d8d88e files/zaptel-mkdir-usrincludelinux.patch 469
 MD5 4f38ae7d0fb20dee726303a35ca85eda files/digest-zaptel-0.7.0 64
