@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/zaptel
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.3 2004/03/16 00:25:16 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.4 2004/03/16 00:28:12 stkn Exp $
+
+  16 Mar 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild:
+  removed blocking of dev-sources (bug #44588)
 
 *zaptel-0.8.1 (16 Mar 2004)
 
